--- a/src/style.css
+++ b/src/style.css
@@ -17,3 +17,20 @@ body {
     border-radius: 50%;
     margin-bottom: 20px;
 }
+
+#arrow {
+    width: 0;
+    height: 0;
+    border-left: 20px solid transparent;
+    border-right: 20px solid transparent;
+    border-top: 20px solid black;
+    margin: 0 auto;
+    position: relative;
+    top: -40px;
+}
+
+#result {
+    margin-top: 20px;
+    font-size: 1.5em;
+    font-weight: bold;
+}
