--- a/src/style.css
+++ b/src/style.css
@@ -10,6 +10,7 @@ body {
 
 .wheel-container {
     text-align: center;
+    position: relative;
 }
 
 #wheelCanvas {
@@ -24,9 +25,10 @@ body {
     border-left: 20px solid transparent;
     border-right: 20px solid transparent;
     border-top: 20px solid black;
-    margin: 0 auto;
-    position: relative;
-    top: -40px;
+    position: absolute;
+    top: 20px;
+    left: 50%;
+    transform: translateX(-50%);
 }
 
 #result {
