--- a/src/style.css
+++ b/src/style.css
@@ -26,7 +26,7 @@ body {
     border-right: 20px solid transparent;
     border-top: 20px solid black;
     position: absolute;
-    top: 20px;
+    top: 10px; /* Adjust this value to position the arrow correctly */
     left: 50%;
     transform: translateX(-50%);
 }
